backend/cargo_check.txt
cargo :     Checking backend v0.1.0 
(D:\Projects\Skoola\backend)
At line:1 char:1
+ cargo check --color never 2>&1 | Out-File -Encoding 
utf8 cargo_check. ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking 
    ba...Skoola\backend):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0631]: type mismatch in function arguments
   --> src\routes\mod.rs:547:19
    |
547 |     
cfg.configure(crate::handlers::co_curricular::config);
    |         --------- 
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected due to 
this
    |         |
    |         required by a bound introduced by this call
    |
   ::: src\handlers\co_curricular.rs:161:1
    |
161 | pub fn config(cfg: &mut web::ServiceConfig) {
    | ------------------------------------------- found 
signature defined here
    |
    = note: expected function signature `for<'a, 'b> 
fn(&'a mut apistos::web::ServiceConfig<'b>) -> _`
               found function signature `fn(&mut 
actix_web::web::ServiceConfig) -> _`
note: required by a bound in 
`apistos::web::ServiceConfig::<'_>::configure`
   --> C:\Users\tenuk\.cargo\registry\src\index.crates.io-
1949cf8c6b5b557f\apistos-0.6.0\src\internal\actix\service_
config.rs:37:8
    |
 35 |   pub fn configure<F>(&mut self, f: F) -> &mut Self
    |          --------- required by a bound in this 
associated function
 36 |   where
 37 |     F: FnOnce(&mut ServiceConfig),
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this 
bound in `ServiceConfig::<'_>::configure`
help: consider wrapping the function in a closure
    |
547 |     cfg.configure(|arg0: &mut 
apistos::web::ServiceConfig<'_>| 
crate::handlers::co_curricular::config(/* &mut 
actix_web::web::ServiceConfig */));
    |                   
++++++++++++++++++++++++++++++++++++++++++++              
                         
++++++++++++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `(..., ..., ..., ..., ..., 
..., ..., ..., ..., ..., ..., ..., ..., ...): 
CompatibleType<..., ...>` is not satisfied
    --> src\services\library.rs:394:25
     |
 394 |         .first::<Staff>(&mut conn)?;
     |          -----          ^^^^^^^^^ unsatisfied 
trait bound
     |          |
     |          required by a bound introduced by this 
call
     |
     = help: the trait 
`load_dsl::private::CompatibleType<Staff, Sqlite>` is not 
implemented for `(..., ..., ..., ..., ..., ..., ..., ..., 
..., ..., ..., ..., ..., ...)`
     = note: this is a mismatch between what your query 
returns and what your type expects the query to return
     = note: the fields in your struct need to match the 
fields returned by your query in count, order and type
     = note: consider using 
`#[diesel(check_for_backend(Sqlite))]` on either 
`#[derive(Selectable)]` or `#[derive(QueryableByName)]` 
             on your struct `Staff` and in your query 
`.select(Staff::as_select())` to get a better error 
message
     = help: the following other types implement trait 
`load_dsl::private::CompatibleType<U, DB>`:
               `Untyped` implements 
`load_dsl::private::CompatibleType<U, DB>`
               
`diesel::expression::select_by::SelectBy<U, DB>` 
implements `load_dsl::private::CompatibleType<U, DB>`
               `diesel::sql_types::Nullable<(ST, ST1)>` 
implements `load_dsl::private::CompatibleType<std::option:
:Option<__T>, __DB>`
               `diesel::sql_types::Nullable<(ST, ST1, 
ST2)>` implements `load_dsl::private::CompatibleType<std::
option::Option<__T>, __DB>`
               `diesel::sql_types::Nullable<(ST, ST1, 
ST2, ST3)>` implements `load_dsl::private::CompatibleType<
std::option::Option<__T>, __DB>`
               `diesel::sql_types::Nullable<(ST, ST1, 
ST2, ST3, ST4)>` implements `load_dsl::private::Compatible
Type<std::option::Option<__T>, __DB>`
               `diesel::sql_types::Nullable<(ST, ST1, 
ST2, ST3, ST4, ST5)>` implements `load_dsl::private::Compa
tibleType<std::option::Option<__T>, __DB>`
               `diesel::sql_types::Nullable<(ST, ST1, 
ST2, ST3, ST4, ST5, ST6)>` implements `load_dsl::private::
CompatibleType<std::option::Option<__T>, __DB>`
             and 26 others
     = note: required for 
`SelectStatement<FromClause<table>, ..., ..., ..., ..., 
...>` to implement `LoadQuery<'_, _, Staff>`
note: required by a bound in `first`
    --> C:\Users\tenuk\.cargo\registry\src\index.crates.io
-1949cf8c6b5b557f\diesel-2.3.6\src\query_dsl\mod.rs:1833:2
2
     |
1830 |     fn first<'query, U>(self, conn: &mut Conn) -> 
QueryResult<U>
     |        ----- required by a bound in this 
associated function
...
1833 |         Limit<Self>: LoadQuery<'query, Conn, U>,
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ 
required by this bound in `RunQueryDsl::first`
     = note: the full name for the type has been written 
to 'D:\Projects\Skoola\backend\target\debug\deps\backend-4
345392a97b0adb4.long-type-528426289466224459.txt'
     = note: consider using `--verbose` to print the full 
type name to the console

error[E0277]: the trait bound `(..., ..., ..., ..., ..., 
..., ..., ..., ..., ..., ..., ..., ..., ...): 
CompatibleType<..., ...>` is not satisfied
    --> src\services\library.rs:405:29
     |
 405 |             .first::<Staff>(&mut conn)
     |              -----          ^^^^^^^^^ unsatisfied 
trait bound
     |              |
     |              required by a bound introduced by 
this call
     |
     = help: the trait 
`load_dsl::private::CompatibleType<Staff, Sqlite>` is not 
implemented for `(..., ..., ..., ..., ..., ..., ..., ..., 
..., ..., ..., ..., ..., ...)`
     = note: this is a mismatch between what your query 
returns and what your type expects the query to return
     = note: the fields in your struct need to match the 
fields returned by your query in count, order and type
     = note: consider using 
`#[diesel(check_for_backend(Sqlite))]` on either 
`#[derive(Selectable)]` or `#[derive(QueryableByName)]` 
             on your struct `Staff` and in your query 
`.select(Staff::as_select())` to get a better error 
message
     = help: the following other types implement trait 
`load_dsl::private::CompatibleType<U, DB>`:
               `Untyped` implements 
`load_dsl::private::CompatibleType<U, DB>`
               
`diesel::expression::select_by::SelectBy<U, DB>` 
implements `load_dsl::private::CompatibleType<U, DB>`
               `diesel::sql_types::Nullable<(ST, ST1)>` 
implements `load_dsl::private::CompatibleType<std::option:
:Option<__T>, __DB>`
               `diesel::sql_types::Nullable<(ST, ST1, 
ST2)>` implements `load_dsl::private::CompatibleType<std::
option::Option<__T>, __DB>`
               `diesel::sql_types::Nullable<(ST, ST1, 
ST2, ST3)>` implements `load_dsl::private::CompatibleType<
std::option::Option<__T>, __DB>`
               `diesel::sql_types::Nullable<(ST, ST1, 
ST2, ST3, ST4)>` implements `load_dsl::private::Compatible
Type<std::option::Option<__T>, __DB>`
               `diesel::sql_types::Nullable<(ST, ST1, 
ST2, ST3, ST4, ST5)>` implements `load_dsl::private::Compa
tibleType<std::option::Option<__T>, __DB>`
               `diesel::sql_types::Nullable<(ST, ST1, 
ST2, ST3, ST4, ST5, ST6)>` implements `load_dsl::private::
CompatibleType<std::option::Option<__T>, __DB>`
             and 26 others
     = note: required for 
`SelectStatement<FromClause<table>, ..., ..., ..., ..., 
...>` to implement `LoadQuery<'_, _, Staff>`
note: required by a bound in `first`
    --> C:\Users\tenuk\.cargo\registry\src\index.crates.io
-1949cf8c6b5b557f\diesel-2.3.6\src\query_dsl\mod.rs:1833:2
2
     |
1830 |     fn first<'query, U>(self, conn: &mut Conn) -> 
QueryResult<U>
     |        ----- required by a bound in this 
associated function
...
1833 |         Limit<Self>: LoadQuery<'query, Conn, U>,
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ 
required by this bound in `RunQueryDsl::first`
     = note: the full name for the type has been written 
to 'D:\Projects\Skoola\backend\target\debug\deps\backend-4
345392a97b0adb4.long-type-528426289466224459.txt'
     = note: consider using `--verbose` to print the full 
type name to the console

warning: value assigned to `message` is never read
  --> src\errors\mod.rs:50:9
   |
50 |     pub message: String,
   |         ^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of 
`#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, E0631.
For more information about an error, try `rustc --explain 
E0277`.
warning: `backend` (bin "backend") generated 1 warning
error: could not compile `backend` (bin "backend") due to 
3 previous errors; 1 warning emitted
